fix fireworks styling so overflow is hidden

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,15 +24,13 @@ body {
   width: auto;
   grid-column-start: 1;
   grid-column-end: 4;
-  align-content: center;
-  justify-items: center;
 }
 
 #game-header {
   display: grid;
   grid-template-columns: 200px 700px 200px;
   justify-content: center;
-  align-content: center;
+  overflow: hidden;
 }
 
 .fireworks img {
@@ -42,15 +40,11 @@ body {
 
 .fireworks {
   justify-self: center;
-  justify-content: center;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 #player-name {
   justify-self: center;
-  align-self: center;
-  padding: 55px;
+  padding: 20px;
 }
 
 .game-expectation {
